--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddItemActivity"
-            android:parentActivityName=".ItemListActivity"></activity>
-        <activity android:name=".ItemPageActivity" />
+        <activity android:name=".FullScreenImageActivity"
+            android:parentActivityName=".ItemPageActivity"></activity>
+        <activity
+            android:name=".AddItemActivity"
+            android:parentActivityName=".ItemListActivity" />
+        <activity
+            android:name=".ItemPageActivity"
+            android:parentActivityName=".ItemListActivity" />
         <activity
             android:name=".ItemListActivity"
             android:parentActivityName=".ProductActivity" />
